More OpenAPI Support
